Fixed misaligned grey box

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ body {
     font-family: "Bebas Neue";
     font-size: 45px;
     letter-spacing: 1px;
-    margin-top: 6px;
+    padding-top: 6px;
   }
 
   h3 {
@@ -135,7 +135,7 @@ body {
 
     h3 {
       flex: 3;
-      margin-top: 4px;
+      margin-top: 2px;
       margin-right: 50px;
     }
 
